c2prj1_cards/grade.txt
Grading at Wed Jun 10 07:02:46 UTC 2020
Compiling cards.c
cards.c: In function ‘ranking_to_string’:
cards.c:22:10: error: ‘TWO_return’ undeclared (first use in this function)
     case TWO_return printf("TWO_PAIR" ; break ;
          ^
cards.c:22:10: note: each undeclared identifier is reported only once for each function it appears in
cards.c:22:21: error: expected ‘:’ or ‘...’ before ‘printf’
     case TWO_return printf("TWO_PAIR" ; break ;
                     ^
cards.c:22:39: error: expected ‘)’ before ‘;’ token
     case TWO_return printf("TWO_PAIR" ; break ;
                                       ^
cards.c:28:3: error: expected ‘;’ before ‘}’ token
   }
   ^
cards.c:15:5: error: enumeration value ‘TWO_PAIR’ not handled in switch [-Werror=switch]
     switch(r){
     ^
cards.c:15:5: error: enumeration value ‘PAIR’ not handled in switch [-Werror=switch]
cards.c:15:5: error: enumeration value ‘NOTHING’ not handled in switch [-Werror=switch]
cards.c:30:1: error: ISO C forbids nested functions [-Werror=pedantic]
 char value_letter(card_t c) {
 ^
cards.c:53:1: error: ISO C forbids nested functions [-Werror=pedantic]
 char suit_letter(card_t c) {
 ^
cards.c:68:1: error: ISO C forbids nested functions [-Werror=pedantic]
 void print_card(card_t c) {
 ^
cards.c:75:1: error: ISO C forbids nested functions [-Werror=pedantic]
 card_t card_from_letters(char value_let, char suit_let) {
 ^
cards.c:88:1: error: ISO C forbids nested functions [-Werror=pedantic]
 card_t card_from_num(unsigned c) {
 ^
cards.c:117:1: error: expected declaration or statement at end of input
 }
 ^
cards.c:117:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Could not compile your card.c!

Overall Grade: FAILED
